# aws-queue-dump

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
