[package]
name = "aws-queue-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config =  {  version = "1.1.9",features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.18.0", features = ["behavior-version-latest"] }
dialoguer = "0.11.0"
serde = "1.0.197"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"
